--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-django
-pdf2image
-opencv-python
-numpy
+django>=5.0
+pdf2image>=1.17.0
+opencv-python-headless>=4.8.0
+numpy<2.0
 imutils
 pillow
 PyPDF2
+pymupdf
 gunicorn
 uvicorn
-pandas
